feat: Add basic CRUD to RoleController
