# src/infrastructure/Bathhouse.Contracts/Models/RoleResponse.cs
@@ -1,0 +1,9 @@
+﻿using System;
+
+namespace Bathhouse.Contracts.Models
+{
+  public record RoleResponse(
+  Guid Id,
+  string Name,
+  string? NormalizedName);
+}
